# p3e8

./: .gitignore  CMakeLists.txt  P3.Doxyfile
src/: Professor.cpp  Professor.h  Spell.cpp  Spell.h  WizardStudent.cpp  WizardStudent.h  core_logic.cpp  core_logic.h  main.cpp
tests/: test_main.cpp
